# data-engineering-pgt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: check-chrome-version.yml  test-conda-env.yml  test-frontend-run-e2e.yml  test-frontend.yml
apache-zeppelin/docs/: CONTRIBUTION_WORKFLOW.md  branch-tracking-guide.md  git-squash-guide.md  how_to_test_ci.md  zeppelin-pr-workflow.md
data-engineering/: README.md
docker/elk/: docker-compose.yml
docs/: claude-code-installation.md  claude-code-mcp.md  claude-dashboard.md
docs/claude/: claude-code-installation.md  context7-mcp-setup.md  github-mcp-setup.md  sequential-thinking-mcp-setup.md
docs/git/: pr-checkout.md
docs/mcp/: sequential-thinking.md
docs/node/: node-installation.md
docs/python/: uv-installation.md
docs/resume/: 20260714.md
ecommerce-behavior-data/: .gitignore  READMD.md  README.md  build.sbt
ecommerce-behavior-data/sql/: ecommerce_behavior_data.sql
online-course/: README.md
stock_analysis/: main.py  silver.csv
stock_analysis/20251009_종목별시가총액/: KOSPI_TOP100_20241008.csv  KOSPI_TOP100_20251002.csv  KOSPI_TOP10_3시점비교.csv  KOSPI_TOP10_3시점비교_시총비율포함.csv  KOSPI_TOP10_3시점비교_요약형.csv  KOSPI_시가총액_3시점비교_요약형.py  KOSPI_시가총액_상위100개.py  SP500_TOP20_3시점비교_요약형.csv  SP500_시가총액_3시점비교_요약형.py  streamlit_app.py
stock_analysis/20251010_종목별시가총액/: KOSPI_TOP20_20251010.csv  KOSPI_오늘기준_시가총액_상위20개.py  KOSPI_오늘기준_시가총액_상위20개_20251010.csv  KOSPI_오늘기준_시가총액_상위20개_streamlit.py  KOSPI_오늘기준_시가총액_상위30개.py  KOSPI_오늘기준_시가총액_상위30개_20251010.csv  KOSPI_오늘기준_시가총액_상위50개.py  (+8 more)
(+116 files in other folders)
